# Sumi

./: .gitignore  CMakeLists.txt  CompareLogs.py  LICENSE  gba-tests-master.rar  imgui.ini  makefile  memory.py  table.txt
imgui/: imgui_impl_glfw.cpp
include/: Application.hpp  CPU.hpp  Emulator.hpp  GPU.hpp  GameWindow.hpp  Memory.hpp  Message.hpp  ShaderProgram.hpp  Window.hpp  utils.hpp
include/Sumi/: arm.hpp  bit.hpp  gba.hpp  window.hpp
include/cpu/: Instructions.hpp  arm.hpp  bit.hpp
include/glad/: glad.h
roms/: 5_DP_Thumb.gba  fuzz_test_1.gba  main.gba
shaders/: bitmap.frag  bitmap.vert
src/: Application.cpp  GameWindow.cpp  Memory.cpp  arm.cpp  branch.cpp  data_processing.cpp  data_transfer.cpp  decompilation.cpp  gba.cpp  glad.c  log.cpp  main.cpp  multiply.cpp  utils.cpp  window.cpp
src/cpu/: arm.cpp  branch.cpp  data_processing.cpp  data_transfer.cpp  decompilation.cpp  instruction_ops.cpp  log.cpp
